--- a/style/scss/_thank-section.scss
+++ b/style/scss/_thank-section.scss
@@ -4,7 +4,7 @@
   align-items: center;
   text-align: center;
   flex-direction: column;
-  padding: 15rem 0;
+  padding: 15rem 2rem;
 
   &__final-logo {
     margin-bottom: 3rem;
@@ -14,8 +14,7 @@
     font-size: 1.6rem;
     font-weight: 400;
     line-height: 2.2rem;
-    padding-left: 42rem;
-    padding-right: 42rem;
+    max-width: 620px;
   }
 }
 
@@ -30,7 +29,7 @@
 
 @media only screen and (min-width:#{$phone-size}) and (max-width:#{$desktop-size}) {
   .thank-section {
-    padding: 12rem 0; // Adjust padding acording to the margin of the logo
+    padding: 12rem 2; // Adjust padding acording to the margin of the logo
     &__final-logo {
       margin-bottom: 6rem; // Increase gap between logo and text
     }
